# pc-projekt

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  blocks.c  blocks.h  in.ppm  in.txt  io.c  io.h  main.c  mario.ppm  out.ppm  scenarios.c  scenarios.h  scribbles.ppm  smile.ppm  viewer.py  waermeleitung.c
docs/: annotated.html  blocks_8h.html  blocks_8h__dep__incl.dot  blocks_8h__dep__incl.md5  blocks_8h_source.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  io_8h.html  io_8h_source.html  main_8c.html  main_8c__incl.dot  main_8c__incl.md5  scenarios_8h.html  scenarios_8h__dep__incl.dot  scenarios_8h__dep__incl.md5  scenarios_8h_source.html  structconfig__s-members.html  structconfig__s.html
docs/html/: _formulas.tex  blocks_8h.html  functions.html  globals.html  globals_type.html  io_8h__dep__incl.dot  io_8h__dep__incl.md5  main_8c__incl.dot  menudata.js  structconfig__s-members.html  structconfig__s.html
docs/html/search/: all_4.js  searchdata.js  variables_0.js  variables_4.js
docs/search/: all_1.js  all_3.js  all_4.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  variables_2.js
