cmake_minimum_required(VERSION 2.0)
add_executable(waermeleitung main.c io.c blocks.c scenarios.c)
find_package(MPI REQUIRED)
include_directories(SYSTEM ${MPI_INCLUDE_PATH})
target_link_libraries(waermeleitung ${MPI_C_LIBRARIES})
target_link_libraries(waermeleitung m)
target_compile_options(waermeleitung PRIVATE -Wall)